--- a/static/perguntas.css
+++ b/static/perguntas.css
@@ -1,27 +1,110 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+}
+
+.faq-page {
+    background: url('../static/images/ultrafarma-back.jpeg') no-repeat center center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+
+.faq-page::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.faq-header {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+    margin: 20px;
+    z-index: 2;
+}
+
+
+.faq-title-container {
+    background-color: rgba(255, 255, 255, 0.7); 
+    padding: 10px 20px;
+    border-radius: 8px;
+    margin-right: 20px;
+}
+
+.faq-title {
+    font-size: 2em;
+    color: #004080;
+}
+
+.contact-button {
+    display: flex;
+    align-items: center; 
+    padding: 10px 20px;
+    background-color: #004080;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.contact-button img {
+    width: 30px; 
+    height: 30px; 
+    margin-right: 10px; 
+}
+
+main.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    padding: 20px;
+    z-index: 2;
+}
+
 .faq-container {
-    background-color: #295488;
+    background-color: rgba(41, 84, 136, 0.9);
     padding: 20px;
     border-radius: 10px;
-    width: 400px;
-    color: white;
-    position: relative;
+    width: 80%;
+    max-width: 600px;
 }
 
 .faq-item {
     background-color: white;
-    color: black;
+    color: #003366;
     padding: 15px;
     margin-bottom: 10px;
     border-radius: 5px;
     cursor: pointer;
+    border: 1px solid #295488;
+    transition: background-color 0.3s ease;
 }
 
 .faq-item:hover {
-    background-color: #e0e0e0;
+    background-color: #f0f8ff;
 }
 
 .faq-item .faq-question {
     font-weight: bold;
+    position: relative;
+    padding-right: 20px;
 }
 
 .faq-item .faq-answer {
@@ -35,11 +118,26 @@
 }
 
 .faq-item.open .faq-question::after {
-    content: '\25BC';
-    float: right;
+    content: '\25BC'; 
+    position: absolute;
+    right: 10px;
 }
 
 .faq-item .faq-question::after {
-    content: '\25B6';
-    float: right;
+    content: '\25B6'; 
+    position: absolute;
+    right: 10px;
+}
+
+.footer {
+    background-color: #004080;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 0.9em;
+    font-family: Arial, sans-serif;
+    width: 100%;
+    position: relative;
+    z-index: 2;
+    margin-top: auto;
 }
