--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
                     <i class="fa-solid fa-lock"></i>
                     <input type="password" id="password" name="password" placeholder="Senha" required>
                 </label>
-                <a href="{{ url_for('forgot_password') }}" class="forgot-password">Esqueci a senha</a>
+                <a href="#" class="forgot-password">Esqueci a senha</a>
                 <input type="submit" value="Entrar">
             </form>
         </div>
