manuais para download

--- a/templates/manuais.html
+++ b/templates/manuais.html
@@ -21,15 +21,15 @@
                 <ul>
                     <li>
                         <img src="../static/images/document.png" alt="Documento" width="20" height="20">
-                        <a href="#">Manual de Conduta Ética</a>
+                        <a href="/download_pdf/manual_conduta_etica.pdf">Manual de Conduta Ética</a>
                     </li>
                     <li>
                         <img src="../static/images/document.png" alt="Documento" width="20" height="20">
-                        <a href="#">Guia de Comportamento Profissional</a>
+                        <a href="/download_pdf/comportamento_profissional.pdf">Guia de Comportamento Profissional</a>
                     </li>
                     <li>
                         <img src="../static/images/document.png" alt="Documento" width="20" height="20">
-                        <a href="#">Código de Ética Empresarial</a>
+                        <a href="/download_pdf/etica_empresarial.pdf">Código de Ética Empresarial</a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +38,7 @@
                 <ul>
                     <li>
                         <img src="../static/images/document.png" alt="Documento" width="20" height="20">
-                        <a href="#">Manual de Compliance Legal</a>
+                        <a href="/download_pdf/manual_compliance.pdf">Manual de Compliance Legal</a>
                     </li>
                     <li>
                         <img src="../static/images/document.png" alt="Documento" width="20" height="20">
