--- a/templates/recursos.html
+++ b/templates/recursos.html
@@ -21,13 +21,13 @@
             <div class="links-section">
                 <h2>Links</h2>
                 <ul>
-                    <li><a href="#"><i class="fas fa-link"></i> Lei Geral de Proteção de Dados (LGPD)</a></li>
-                    <li><a href="#"><i class="fas fa-link"></i> Normas Regulamentadoras de Segurança e Saúde no Trabalho (NRs)</a></li>
+                    <li><a href="https://www.gov.br/esporte/pt-br/acesso-a-informacao/lgpd"><i class="fas fa-link"></i> Lei Geral de Proteção de Dados (LGPD)</a></li>
+                    <li><a href="https://www.gov.br/trabalho-e-emprego/pt-br/assuntos/inspecao-do-trabalho/seguranca-e-saude-no-trabalho/ctpp-nrs/normas-regulamentadoras-nrs"><i class="fas fa-link"></i> Normas Regulamentadoras de Segurança e Saúde no Trabalho (NRs)</a></li>
                 </ul>
                 <h2>Sites Importantes</h2>
                 <ul>
-                    <li><a href="#"><i class="fas fa-external-link-alt"></i> Portal da Transparência</a></li>
-                    <li><a href="#"><i class="fas fa-external-link-alt"></i> Controladoria-Geral da União (CGU)</a></li>
+                    <li><a href="https://portaldatransparencia.gov.br/"><i class="fas fa-external-link-alt"></i> Portal da Transparência</a></li>
+                    <li><a href="https://www.gov.br/cgu/pt-br"><i class="fas fa-external-link-alt"></i> Controladoria-Geral da União (CGU)</a></li>
                 </ul>
             </div>
 
